map shows boat and wind arrows but the wind arrows have a wierd angle

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
+asttokens==3.0.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+decorator==5.1.1
+executing==2.2.0
 idna==3.10
-PyQt6==6.8.0
-PyQt6-Qt6==6.8.1
-PyQt6-WebEngine==6.8.0
-PyQt6-WebEngine-Qt6==6.8.1
-PyQt6_sip==13.9.1
+jedi==0.19.2
+matplotlib-inline==0.1.7
+numpy==2.2.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+prompt_toolkit==3.0.50
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.16
+PyQt5_sip==12.17.0
+PyQtWebEngine==5.15.7
+PyQtWebEngine-Qt5==5.15.16
+python-dateutil==2.9.0.post0
+pytz==2025.1
 requests==2.32.3
+six==1.17.0
+stack-data==0.6.3
+traitlets==5.14.3
+tzdata==2025.1
 urllib3==2.3.0
+wcwidth==0.2.13
