--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ PyQtWebEngine==5.15.7
 PyQtWebEngine-Qt5==5.15.16
 python-dateutil==2.9.0.post0
 pytz==2025.1
+r2pipe==1.9.4
 requests==2.32.3
 six==1.17.0
 stack-data==0.6.3
