--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asttokens==3.0.0
+blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 decorator==5.1.1
 executing==2.2.0
+Flask==3.1.0
+flask-cors==5.0.1
 idna==3.10
+itsdangerous==2.2.0
 jedi==0.19.2
+Jinja2==3.1.5
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 numpy==2.2.2
 pandas==2.2.3
@@ -29,3 +36,4 @@ traitlets==5.14.3
 tzdata==2025.1
 urllib3==2.3.0
 wcwidth==0.2.13
+Werkzeug==3.1.3
