--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sailbot",
+    "name": "ground_station_25",
     "version": "1.0.0",
     "description": "Sailbot Ground Station",
     "main": "server.js",
@@ -8,12 +8,12 @@
         "dev": "nodemon src/server.js"
     },
     "dependencies": {
-        "body-parser": "^1.19.0",
+        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
-        "express": "^4.21.2"
+        "express": "^4.19.2"
     },
     "devDependencies": {
-        "nodemon": "^2.0.22"
+        "nodemon": "^3.1.0"
     },
     "engines": {
         "node": ">=14.0.0"
@@ -23,9 +23,5 @@
         "url": "git+https://github.com/sailbot-vt/ground_station_25.git"
     },
     "author": "Barrett Wise",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/sailbot-vt/ground_station_25/issues"
-    },
-    "homepage": "https://github.com/sailbot-vt/ground_station_25#readme"
+    "license": "ISC"
 }
