--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-certifi==2025.1.31
-charset-normalizer==3.4.1
-idna==3.10
-numpy==2.2.4
-pandas==2.2.3
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.16
-PyQt5_sip==12.17.0
-PyQtWebEngine==5.15.7
-PyQtWebEngine-Qt5==5.15.16
-python-dateutil==2.9.0.post0
-pytz==2025.1
-requests==2.32.3
-six==1.17.0
-tzdata==2025.1
-urllib3==2.3.0
+certifi
+charset-normalizer
+idna
+numpy
+pandas
+PyQt5
+PyQt5-Qt5
+PyQt5_sip
+PyQtWebEngine
+PyQtWebEngine-Qt5
+python-dateutil
+pytz
+requests
+six
+tzdata
+urllib3
