--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 .python-version
 .pytest_cache
+__pycache__
 node_modules
-autopilot_params
-boat_data
-boat_data_bounds
-src/__pycache__
+app_data/autopilot_params
+app_data/boat_data
+app_data/boat_data_bounds
