file selection now uses os ui

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-.DS_Store
-.python-version
-.pytest_cache
-__pycache__
-node_modules
-app_data/autopilot_params
-app_data/boat_data
-app_data/boat_data_bounds
+*
+!app_data/assets/
+!app_data/boat_data_bounds/default.json
+!src
+!.gitignore
+!package.json
+!package-lock.json
+!README.md
+!requirements.txt
+!run.sh
