--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 .python-version
 .DS_Store
 bin
+app_data/autopilot_params/
+app_data/boat_data/
+app_data/boat_data_bounds/
+!app_data/boat_data_bounds/default.json
