--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 .pytest_cache
 .python-version
 .DS_Store
-bin
-app_data/autopilot_params/
-app_data/boat_data/
-app_data/boat_data_bounds/
-!app_data/boat_data_bounds/default.json
+/bin
+go.sum
+/app_data/autopilot_params/
+/app_data/boat_data/
+/app_data/boat_data_bounds/
+!/app_data/boat_data_bounds/default.json
