buoy icons working

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 .DS_Store
 /bin
 go.sum
-/app_data/autopilot_params/
-/app_data/boat_data/
-/app_data/boat_data_bounds/
-!/app_data/boat_data_bounds/default.json
+app_data/autopilot_params/
+app_data/boat_data/
+app_data/boat_data_bounds/
+app_data/buoy_data/
+!app_data/boat_data_bounds/default.json
+!app_data/buoy_data/default.json
