remove chris's conda environment

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ app_data/boat_data_bounds/
 app_data/buoy_data/
 !app_data/boat_data_bounds/default.json
 !app_data/buoy_data/default.json
+sailbot_groundstation.yml
